# public-sig-net-sdk

./: .gitignore  Cargo.toml  README.md  SECURITY-AUDIT.md  poc-vuln1  poc-vuln1-integer-overflow.cpp  pyproject.toml  sig-net-coap.cpp  sig-net-crypto.cpp  sig-net-crypto.hpp  sig-net-parse.cpp  sig-net-selftest.cpp  sig-net-send.cpp
.claude/: settings.local.json
sig-net-example-tid-level-tx/: MainForm.cpp  MainForm.dfm
signet/: __init__.py  coap.py  constants.py  crypto.py  exceptions.py  parse.py  security.py  send.py  tlv.py  transport.py  types.py
src/: coap.rs  constants.rs  crypto.rs  lib.rs  parse.rs  security.rs  selftest.rs  send.rs  tlv.rs  types.rs
tests/: conftest.py  test_coap.py  test_crypto.py  test_known_vectors.py  test_parse.py  test_security.py  test_send.py  test_tlv.py
